# MeetYou

./: .env.bak  .env.example  .gitignore  AGENT.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MeetYou.cmd  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  agent_protocol.py  alembic.ini  build_info.py  client_tool_protocol.py  config.json  d  daily-tech-frontiers-2026-04-07.md  endpoint_tool_protocol.py  get_diff.py  launcher.py  main.py  memory_display.cmd  memory_graph.json  memory_graph_view.html  memory_tasks.json  memory_tasks.json.bak  migrate_to_core_db.py  package-lock.json  requirements-core.txt  requirements-desktop-agent.txt  requirements-desktop-client.txt  requirements-edge-agent.txt  requirements-edge-client.txt  requirements-research-adapter.txt  requirements.txt  smoke_check.py  (+5 more)
endpoint_providers/raspberry_pi/: README.md  __init__.py  pyproject.toml
endpoint_providers/raspberry_pi/meetyou_rpi_endpoint/: __init__.py  config.py  connection.py  devices.py  health.py  logging.py  main.py  protocol.py  registry.py  security.py
endpoint_providers/raspberry_pi/meetyou_rpi_endpoint/capabilities/: __init__.py  base.py  device.py  echo.py  gpio.py  safe_shell.py  system_info.py
endpoint_providers/raspberry_pi/meetyou_rpi_endpoint/runtime/: __init__.py  heartbeat.py  operation_runner.py  reconnect.py  result_models.py
endpoint_providers/raspberry_pi/tests/: test_capability_registry.py  test_config.py  test_devices.py  test_gpio.py  test_health.py  test_operation_runner.py  test_protocol.py  test_safe_shell.py  test_system_info.py
(+804 files in other folders)
